ADD_SUBDIRECTORY(UChain/bitcoin)
ADD_SUBDIRECTORY(UChain/network)
ADD_SUBDIRECTORY(UChain/consensus)
ADD_SUBDIRECTORY(UChain/database)
ADD_SUBDIRECTORY(UChain/blockchain)
ADD_SUBDIRECTORY(UChain/node)
ADD_SUBDIRECTORY(UChain/protocol)
ADD_SUBDIRECTORY(UChain/client)
ADD_SUBDIRECTORY(UChain/explorer)
ADD_SUBDIRECTORY(ucd)
ADD_SUBDIRECTORY(uc-cli)
