ADD_SUBDIRECTORY(UChain/coin)
ADD_SUBDIRECTORY(UChain/network)
ADD_SUBDIRECTORY(UChain/database)
ADD_SUBDIRECTORY(UChain/blockchain)
ADD_SUBDIRECTORY(UChain/node)
ADD_SUBDIRECTORY(UChain/protocol)
ADD_SUBDIRECTORY(UChain/client)
ADD_SUBDIRECTORY(UChain/explorer)
ADD_SUBDIRECTORY(UChainService/consensus)
ADD_SUBDIRECTORY(UChainService/api)
ADD_SUBDIRECTORY(UChainService/txs)
ADD_SUBDIRECTORY(UChainService/data)
ADD_SUBDIRECTORY(UChainApp/ucd)
ADD_SUBDIRECTORY(UChainApp/uc-cli)
