FILE(GLOB_RECURSE data_SOURCES "*.cpp")

ADD_DEFINITIONS(-DBCD_STATIC=1)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-braced-scalar-init")

ADD_LIBRARY(data_static STATIC ${data_SOURCES})
SET_TARGET_PROPERTIES(data_static PROPERTIES OUTPUT_NAME uc_data)
TARGET_LINK_LIBRARIES(data_static ${Boost_LIBRARIES} ${txs_LIBRARY} ${bitcoin_LIBRARY})
INSTALL(TARGETS data_static DESTINATION lib)

IF(ENABLE_SHARED_LIBS)
    ADD_DEFINITIONS(-DBCD_DLL=1)
  ADD_LIBRARY(data_shared SHARED ${data_SOURCES})
  SET_TARGET_PROPERTIES(data_shared PROPERTIES OUTPUT_NAME uc_data)
  TARGET_LINK_LIBRARIES(data_shared ${Boost_LIBRARIES} ${txs_LIBRARY} ${bitcoin_LIBRARY})
  INSTALL(TARGETS data_shared DESTINATION lib)
ENDIF()
