# for C library
#ADD_SUBDIRECTORY(math/external)

#INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/UChain/consensus/clone")
FILE(GLOB_RECURSE txs_SOURCES "*.cpp")

ADD_DEFINITIONS(-DBC_STATIC=1)

#ADD_LIBRARY(secp256k1_static STATIC IMPORTED)                                         
#SET_TARGET_PROPERTIES(secp256k1_static PROPERTIES IMPORTED_LOCATION ${secp256k1_ROOT_DIR}/lib/libsecp256k1.a)

ADD_LIBRARY(txs_static STATIC ${txs_SOURCES})
SET_TARGET_PROPERTIES(txs_static PROPERTIES OUTPUT_NAME uc_txs)
TARGET_LINK_LIBRARIES(txs_static ${Boost_LIBRARIES})
INSTALL(TARGETS txs_static DESTINATION lib)

IF(ENABLE_SHARED_LIBS)
    ADD_DEFINITIONS(-DBC_DLL=1)
  ADD_LIBRARY(txs_shared SHARED ${txs_SOURCES})
  SET_TARGET_PROPERTIES(txs_shared PROPERTIES OUTPUT_NAME uc_txs)
  TARGET_LINK_LIBRARIES(txs_shared ${Boost_LIBRARIES})
  INSTALL(TARGETS txs_shared DESTINATION lib)
ENDIF()
